--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.24.0",
     "react": "^17.0.1",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
@@ -58,8 +59,10 @@
     "html-webpack-plugin": "^5.1.0",
     "husky": "4",
     "lint-staged": "^10.5.4",
+    "node-sass": "^6.0.1",
     "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
+    "sass-loader": "^12.3.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
